# claude-tools

./: .envrc  .gitignore  .tmuxp.claude-tools.half.json  CONTRIBUTING.md  LICENSE  Makefile  QUICKREF.md  README.md  claude-cp  claude-tools.opam  claude-tools.opam.locked  dune-project  flake.nix  install.sh  with_summary.jsonl  without_summary.jsonl
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 3zi3fzpzyhkk60jxli1kjmwqqjlp782b-source  57b94a8fvl5bm17vycrn7m0kx8blxrg8-source  6h0sni7pw7gglk3cdml8zmbms1d5k3fq-source  a0h793zm8rzhiqm4ygbhq3ff9dp3s356-source  n81ajfbr6wf65w91c7iyk2kkvm6065yx-source  vdm0qw8zm55szgci5sdvwxr9rwzyzi7n-source  yvhdf5pzrnlqmqig85hz6pmg0kirx349-source  yz933syrpgikpkb81s72db8rjisqsq7a-source
.github/workflows/: release.yml
_build/: .db  .digest-db  log
_build/default/: META.claude-tools  claude-tools.dune-package  claude-tools.install  claude-tools.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: claude_tools_lib.cma  claude_tools_lib.cmxa  claude_tools_lib.cmxs  claude_tools_lib.ml-gen  cvfs.ml
_build/default/lib/.claude_tools_lib.objs/: claude_tools_lib__Cvfs.impl.d  claude_tools_lib__Cvfs.intf.d  claude_tools_lib__Display.impl.all-deps  (+2 more)
_build/default/test/: test_claude_tools.ml
completions/: README.md  claude-tools.bash  claude-tools.zsh
homebrew/: claude-tools.rb
lib/: cvfs.ml  cvfs.mli  display.ml  display.mli  dune
scripts/: build-release.sh
test/: dune  test_claude_tools.ml
(+44 files in other folders)
